--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "react": "^18.0.0",
@@ -16,7 +17,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.0.9"
   },
   "browserslist": {
     "production": [
