--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.477.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.0.0",
