--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.477.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
