--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.477.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.0",
