Add loan application functionality with signature upload and MongoDB integration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.8",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.9",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.0",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9"
   },
