--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,18 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
-    "twilio": "^5.4.5"
+    "nodemon": "^3.1.9",
+    "path": "^0.12.7",
+    "react-signature-canvas": "^1.1.0-alpha.1",
+    "twilio": "^5.4.5",
+    "uuid": "^11.1.0"
   },
   "keywords": []
 }
